# py-proc-watch

./: .gitignore  LICENSE.md  README.md  py_proc_watch.py  py_proc_watch_test.py  pyproject.toml  renovate.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: pull-request-validation.yml
